--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Portfolio Mevlida Salendrkovic</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon"  href="./assets/img/S.svg">
+  <link rel="shortcut icon" href="./assets/img/S.svg" type="image/x-icon">
 </head>
 <body>
   <app-root></app-root>
